[gd_scene load_steps=4 format=3 uid="uid://cn4t5c64yka3x"]

[ext_resource type="Script" path="res://common/scenes/board_logic/controller/shop.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cshgs0ad1ftdo" path="res://common/scenes/board_logic/controller/shop_item.tscn" id="2"]

[sub_resource type="Shortcut" id="2"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.392157)

[node name="Title" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -178.5
offset_top = 80.0
offset_right = 178.5
offset_bottom = 165.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"HeaderLarge"
text = "SHOP_LABEL_TITLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Items" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -446.0
offset_top = -82.0
offset_right = 446.0
offset_bottom = 82.0
theme_override_constants/separation = 20
alignment = 1

[node name="Item1" parent="Items" instance=ExtResource("2")]
layout_mode = 2

[node name="Item2" parent="Items" instance=ExtResource("2")]
layout_mode = 2

[node name="Item3" parent="Items" instance=ExtResource("2")]
layout_mode = 2

[node name="Item4" parent="Items" instance=ExtResource("2")]
layout_mode = 2

[node name="Item5" parent="Items" instance=ExtResource("2")]
layout_mode = 2

[node name="Item6" parent="Items" instance=ExtResource("2")]
layout_mode = 2

[node name="Back" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -68.0
offset_top = -83.0
offset_right = 68.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
shortcut = SubResource("2")
shortcut_in_tooltip = false
text = "MENU_LABEL_BACK"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -382.0
offset_top = 140.0
offset_right = 382.0
offset_bottom = 229.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "SHOP_LABEL_DESCRIPTION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(750, 75)
layout_mode = 2

[node name="Notification" type="AcceptDialog" parent="."]

[connection signal="item_bought" from="Items/Item1" to="." method="_on_shop_item"]
[connection signal="show_description" from="Items/Item1" to="." method="_on_show_description"]
[connection signal="item_bought" from="Items/Item2" to="." method="_on_shop_item"]
[connection signal="show_description" from="Items/Item2" to="." method="_on_show_description"]
[connection signal="item_bought" from="Items/Item3" to="." method="_on_shop_item"]
[connection signal="show_description" from="Items/Item3" to="." method="_on_show_description"]
[connection signal="item_bought" from="Items/Item4" to="." method="_on_shop_item"]
[connection signal="show_description" from="Items/Item4" to="." method="_on_show_description"]
[connection signal="item_bought" from="Items/Item5" to="." method="_on_shop_item"]
[connection signal="show_description" from="Items/Item5" to="." method="_on_show_description"]
[connection signal="item_bought" from="Items/Item6" to="." method="_on_shop_item"]
[connection signal="show_description" from="Items/Item6" to="." method="_on_show_description"]
[connection signal="pressed" from="Back" to="." method="_on_Shop_Back_pressed"]
